--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -9228,10 +9228,14 @@ a:hover .has-overlay h4 {
     border-right: 1px solid #ccc; }
     .comparison-table[data-xs-carousel="true"] .fixed-column tr th {
       vertical-align: top; }
+
+  .comparison-table[data-xs-carousel="true"] .comparison .comparison-pagination {
+    font-size: 14px;
+  }
+
   .comparison-table[data-xs-carousel="true"] .comparison .comparison-pagination .btn {
-    padding: 3px; }
-    .comparison-table[data-xs-carousel="true"] .comparison .comparison-pagination .btn > div {
-      font-size: 14px; }
+    padding: 3px;
+  }
   .comparison-table[data-xs-carousel="true"] .comparison .row > div > div {
     padding: 0; }
     .comparison-table[data-xs-carousel="true"] .comparison .row > div > div table thead tr th {
